--- a/anzhuang_telnet.yml
+++ b/anzhuang_telnet.yml
@@ -2,6 +2,6 @@
 - hosts: all
   tasks:
     - name: Run monitor semaphore task shell script
-      shell: ./test.sh
+      shell: ./anzhuang_telnet.sh
       args:
         chdir: /tmp/semaphore/repository_1_1  # 指定脚本所在目录
